Word-wrapping in search issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ header {
 
 #navbar a {
   text-decoration: none;
+  color: inherit;
 }
 
 #navbar a:visited {
